Adicionando suporte ao docker

--- a/BackEnd/GestaoDeVendas/GestaoDeVendas.Api/Properties/launchSettings.json
+++ b/BackEnd/GestaoDeVendas/GestaoDeVendas.Api/Properties/launchSettings.json
@@ -36,6 +36,16 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "httpPort": 5000,
+      "useSSL": false,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
