--- a/BackEnd/GestaoDeVendas/GestaoDeVendas.Api/appsettings.json
+++ b/BackEnd/GestaoDeVendas/GestaoDeVendas.Api/appsettings.json
@@ -11,8 +11,8 @@
   },
   "Jwt": {
     "Key": "pneumo#ultramicroscopicos@silico#vulcano$cociotico",
-    "Issuer": "GestaoVendas",
-    "Audience": "Clients",
+    "Issuer": "GestaoDeVendas",
+    "Audience": "GestaoDeVendas",
     "ExpirationTimeInMinutes": 5
   }
 }
